4/todo-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: todo-app
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          volumeMounts:
            - name: todo-volume
              mountPath: /usr/src/app/images
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
        - name: todo-backend
          image: todo-backend
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"
