4/todo-application/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: todo-app
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          volumeMounts:
            - name: todo-volume
              mountPath: /usr/src/app/images
          resources:
            limits:
              cpu: "50m"
              memory: "100Mi"
        - name: todo-backend
          image: todo-backend
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"
