4/todo-application/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
